# cmake-utility

./: CMakeLists.txt  Dockerfile  README.md
.do/: deploy.template.yaml
.github/workflows/: cmake.yml
src/: Main.cpp
test/: Main.cpp
